--- a/client/app/components/map/map.view.html
+++ b/client/app/components/map/map.view.html
@@ -1,3 +1,4 @@
+
 <div id="map-view">
     
     <div class="row">
@@ -7,19 +8,19 @@
 
             <form class="form-inline">
                 
-                <div class="form-group" ng-show="vm.routesSelected.length">
-                    <span>Next update in {{vm.timer}} sec.</span>
+                <div class="form-group">
+                    <span ng-show="vm.routesSelected.length">Next update in {{vm.timer}} sec.</span>
+                    <span ng-hide="vm.routesSelected.length">The buses will update every 15sec.</span>
                 </div>
                 
                 <hr>
                 
                 <div class="form-group">
                     <p id="lesser-title">Choose the route</p>
-                <p id="sub-title">Select the route to see the buses</p>
+                    <p id="sub-title">Select the route to see the buses</p>
 
-                    <!-- <input data-ng-model="vm.userDate1" type="text" class="form-control" id="date1" placeholder="1962"> -->
                     <span class="route" ng-repeat="route in vm.routes">
-                    <label class="badge r-{{route.tag}}" style="background-color: #{{route.color}}" for="r-{{route.tag}}">
+                    <label class="badge r-{{route.tag}} badge-{{route.selected}}" style="background-color: #{{route.color}}" for="r-{{route.tag}}">
                       <input
                         type="checkbox"
                         id="r-{{route.tag}}"
@@ -37,7 +38,6 @@
                 <div class="form-group">
 
                     <p id="lesser-title">Choose the direction</p>
-                    <p id="sub-title">Select the direction of the route</p>
 
                     <span ng-repeat="(key, dir) in vm.directions">
                     <label class="radio-inline">
@@ -51,7 +51,33 @@
                     </span>
                       
                 </div>
+                
+                <hr>
+
+                
             </form>
+        </div>
+    </div>
+    
+    <div class="row notification">
+        <div class="col-sm-12">
+            <div>
+                <table class="table table-striped table-bordered">
+                  <thead>
+                    <tr><th>
+                      Notifications
+                    </th></tr>
+                  </thead>
+                  <tbody>
+                    <tr ng-hide="vm.hasMessage()">
+                      <td>No notification.</td>
+                    </tr>
+                    <tr ng-repeat="message in vm.messages">
+                      <td class="{{message.class}}"><div ng-bind-html="message.content"></div></td>
+                    </tr>
+                  </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
