--- a/client/assets/css/style.scss
+++ b/client/assets/css/style.scss
@@ -1,6 +1,3 @@
-
-
-
 /* STANDARD COLORS */
 
 $primaryFont: 'Helvetica', 'Sans-Serif';
@@ -24,6 +21,11 @@ $freeway: #f9a542;
 /*******
 MAP STYLES
 *******/
+
+body { padding: 10px;}
+#map-view {max-width: 1024px;}
+
+.notification {padding-top:10px}
 
 .ocean {fill: $ocean}
 .land {fill: $land;}
@@ -82,6 +84,7 @@ general
     display: none;
 }
 
+.badge-true {background-color: white !important;font-weight: 300!important;color:black; border: 1px solid;}
 
 div.tooltip {   
     position: absolute;     
@@ -129,9 +132,7 @@ svg text {
 .svg-container {
     display: inline-block;
     position: relative;
-    width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
-    height: 100%;
+
     vertical-align: top;
     overflow: hidden;
     background-color: $ocean;
