defer loading streets

--- a/client/app/components/map/map.view.html
+++ b/client/app/components/map/map.view.html
@@ -2,9 +2,9 @@
 <div id="map-view">
     
     <div class="row">
-        <div class="col-sm-9" id="chart-area">
+        <div class="col-md-9" id="chart-area">
         </div>
-        <div class="col-sm-3 standard-text" id="map-text">
+        <div class="col-md-3 standard-text" id="map-text">
 
             <form class="form-inline">
                 
@@ -60,7 +60,7 @@
     </div>
     
     <div class="row notification">
-        <div class="col-sm-12">
+        <div class="col-md-12">
             <div>
                 <table class="table table-striped table-bordered">
                   <thead>
