--- a/client/assets/css/style.scss
+++ b/client/assets/css/style.scss
@@ -23,18 +23,41 @@ MAP STYLES
 *******/
 
 body { padding: 10px;}
-
 #chart-area {background-color:$ocean;}
+.badge {
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+/* mobile */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    
+    .navbar-brand {
+        font-size: 1.1em;
+    }
 
-@media only screen and (min-width : 320px) {
-    #chart-area {
-        max-width: 100%;
+    label.badge {
+        min-width: 30px;
+        padding: 8px;
+        font-size: 1em;
+        margin: 1.5px;
     }
 }
 
-@media only screen and (min-width : 960px) {
+@media screen 
+  and (min-device-width: 960px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
     #chart-area {
         max-width:960px;
+    }
+
+    label.badge {
+        min-width: 30px;
+        padding: 5px;
+        font-weight: 300;
+        margin-bottom: 3px;
     }
 }
 
@@ -83,6 +106,7 @@ body { padding: 10px;}
 .circle-bus {
     stroke-width: 0.8px;
     opacity: 0.9;
+    cursor: pointer;
 }
 
 .circle-busstop {
@@ -90,15 +114,16 @@ body { padding: 10px;}
     opacity: 1;
 }
 
-/******
-general 
-*******/
-
 .route label input {
     display: none;
 }
 
-.badge-true {background-color: white !important;font-weight: 300!important;color:black; border: 1px solid;}
+.badge-true {
+    background-color: white !important;
+    color:black; 
+    border: 1px solid;
+}
+
 
 div.tooltip {   
     position: absolute;     
